2000-06-08  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* snarf.h, guile-snarf.awk.in, guile-snarf.in: Replaced snarf
	markers with identifiers (SCM__I, SCM__D, SCM__S, SCM__E).
	(Thanks to Bernard Urban.)

2000-06-06  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* modules.c (scm_system_module_env_p): Fixed detection of system
	modules.

2000-06-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* scmsigs.c (scm_sigaction): Silently ignore setting handlers for
	`program error signals' because they can't currently be handled by
	Scheme code.

2000-06-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* procs.h (SCM_SET_SUBRF):  Added.

	* procs.c (scm_make_subr_opt):  Don't assign to SCM_SUBRF, use
	SCM_SET_SUBRF instead.  Thanks to Bernard Urban for the bug
	report.

2000-06-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.h (SCM_CARLOC, SCM_CDRLOC):  Don't take the address of a SCM
	value.

	* sort.c (scm_sorted_p, scm_merge, scm_merge_list_x,
	scm_merge_list_step):  Don't take the address of SCM_CAR.  Use
	SCM_CARLOC instead.  Thanks to Bernard Urban for the bug report.

2000-06-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boolean.h (SCM_TRUE_P):  Removed, as people might use it as a
	replacement for !SCM_FALSEP.

	* backtrace.c (display_error_body), boolean.h (SCM_BOOLP), gc.c
	(scm_unhash_name), gh_data.c (gh_module_lookup), load.c
	(scm_primitive_load), print.c (scm_simple_format), procs.c
	(scm_procedure_documentation), procs.h (SCM_TOP_LEVEL), ramap.c
	(scm_array_fill_int), scmsigs.c (scm_sigaction), stacks.c
	(narrow_stack, scm_make_stack, scm_stack_id), symbols.c
	(scm_string_to_obarray_symbol), throw.c (scm_catch,
	scm_lazy_catch, scm_ithrow), unif.c (scm_make_uve, scm_array_p,
	scm_array_set_x, scm_bit_set_star_x, scm_bit_count_star),
	validate.h (SCM_VALIDATE_BOOL_COPY, SCM_VALIDATE_PROC):  Replace
	uses of SCM_TRUE_P (x) with SCM_EQ_P (x, SCM_BOOL_T).

2000-06-04  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* eval.c (scm_badformalsp): New static function.