@@ -27,7 +27,6 @@ ${AWK} -f guile-func-name-check "$fullfilename"
 
 ## We must use a temporary file here, instead of a pipe, because we
 ## need to know if CPP exits with a non-zero status.
-${CPP} -DSCM_MAGIC_SNARFER "$@" | \
-sed 's/^\(.\{128\}.\{128\}.\{128\}.\{128\}.\{128\}.\{128\}.\{128\}.\{128\}\).*/\1/g' \
-> ${temp} || exit $?
-< ${temp} ${AWK} -f `dirname $0`/guile-snarf.awk `basename ${dot_doc}`
+${CPP} -DSCM_MAGIC_SNARFER "$@" > ${temp} || exit $?
+cat ${temp} | sed 's/^\(.\{128\}.\{128\}.\{128\}.\{128\}.\{128\}.\{128\}.\{128\}.\{128\}\).*/\1/g' | \
+${AWK} -f `dirname $0`/guile-snarf.awk `basename ${dot_doc}`
